update of controller and swagger config
